# smart-farm-automation

./: .gitignore  README.md  mqtt.bridge.js  package-lock.json  package.json  store.json  virtual-esp32.js
backend/: ai.engine.js  analytics.engine.js  audit.store.json  behaviour.engine.js  cloudsync.engine.js  db.js  feeding.engine.js  financial.engine.js  health.engine.js  mqtt.bridge.js  package-lock.json  package.json  persistent.store.json  recommendation.engine.js  rule.engine.js  schedule.engine.js  scoring.engine.js  server.js  store.json
backend/api/: alert.routes.js  auth.routes.js  command.routes.js  controllerClass.routes.js  controllerInstance.routes.js  controllers.routes.js  devices.routes.js  farm.routes.js  line.routes.js  maintenance.routes.js  risk.routes.js  rules.routes.js  shed.routes.js  zone.routes.js
backend/bootstrap/: system.bootstrap.js
backend/certs/: ca.crt
backend/controllers/: auth.controller.js  command.controller.js  controller.assign.js  controller.config.js  controller.registry.js  controllerClass.controller.js  controllerInstance.controller.js  device.controller.js  (+6 more)
dashboard/: index.html
esp32-firmware/: CMakeLists.txt  esp32_farm_node.ino
esp32-firmware/main/: CMakeLists.txt  app_main.c  device_state.h  event_loop.c  event_loop.h  system_init.c
fake-esp32/: crypto.verify.js  fake_esp32.js  index.js  mqtt.config.js  mqtt.topics.js  package-lock.json  package.json  telemetry.publisher.js
protocol/: alert.event.schema.json  command.schema.json  device.state.schema.json  recovery.signal.schema.json  telemetry.schema.json
(+472 files in other folders)
